@@ -21,6 +21,7 @@ Features added
   * 3283536 : Manage separate directory for syndicate and freesynd
   * 3337516 : Standardize text fields in configure and loadsave menus
   * 3202739 : keyboard type management
+  * 3461415 : Cycle only through available missions in map menu
   * It's now possible to define an acceleration key for a button by
     inserting a '&' caracter before the letter in the button label in the
 	language file. Works only for letters.
